fixed cards wrap

--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -7,4 +7,5 @@
   align-items: center;
   justify-content: space-around;
   padding: 0 1vh;
+  max-height: calc(100% - 100px);
 }
